
	- Fixed more parsing bugs in other CREATE statements. Thanks to TANIDA
	  Yutaka <tanida@sra.co.jp> and Atsushi Mitani <mitani@sraw.co.jp> for
	  pointing out all these problems.
	- Set ecpg version to 3.2.1.

Fri Mar 18 10:54:47 CET 2005
	  
	- Added patch by Christof Petig <christof@petig-baender.de> to work
	  around gcc bug on powerpc and amd64.

Thu Apr 14 11:59:47 CEST 2005

	- Added patch by Philip Yarra <philip.yarra@internode.on.net> for a
	  bug in thread support.

Thu Jun  2 14:22:32 CEST 2005

	- Fixed memory leak in ecpglib by adding some missing free() commands.
	- Added patch by Gavin Scott <gavin@planetacetech.com> for Intel 64bit
	  hardware.

Wed Aug 24 12:17:48 CEST 2005

	- Check for NULL before checking whether argument is an array.
	- Remove stray character from string quoting.
	- Fixed check to report missing varchar pointer implementation.

Mon Sep 12 13:53:35 CEST 2005

	- Fixed transaction command handling to not ignore savepoints
	  and to correctly check for errors.

Tue Oct  4 15:23:00 CEST 2005

	- Synced parser.
	- Fixed another bug in check to report missing varchar pointer implementation.

Wed Oct  5 16:57:42 CEST 2005

	- Synced lexer.
	- Set ecpg library version to 5.1.
	- Set ecpg version to 4.1.1.

Wed Nov 30 12:49:13 CET 2005

	- Made several variables "const char *" instead of "char *" as
	  proposed by Qingqing Zhou <zhouqq@cs.toronto.edu>.
	- Replaced all strdup() calls by ECPGstrdup().

Fri Dec  2 16:00:10 CET 2005

	- Added special handling of CONNECTION variable that is used by ECPG
	  instead of given to the backend.
	  
Fr Jan 13 17:29:30 CET 2006

	- Fixed a fixed size buffer in preproc.y to be variable size since an
	  overflow could occur on the fixed one.
	  
Tu Jan 17 18:53:03 CET 2006

	- Data transferred binary is now put into the variables verbatim.
	
Tu Jan 24 10:59:21 CET 2006

	- Synced parser and keyword list.
	- Added another test case.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.
